--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: java
-
-before_install:
-  sudo pip install codecov
-
+sudo: false
 after_success:
-  codecov
+  - bash <(curl -s https://codecov.io/bash)
