--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-test-junit</artifactId>
+      <version>1.3.21</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
