--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
   <groupId>org.jacoco</groupId>
   <artifactId>org.jacoco.examples.maven.kotlin</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+
+  <modules>
+    <module>kotlin-module</module>
+  </modules>
+
+  <packaging>pom</packaging>
 
   <name>JaCoCo Maven plug-in example for Kotlin project</name>
   <url>http://www.eclemma.org/jacoco</url>
