--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 
   <properties>
     <kotlin.version>1.3.21</kotlin.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
